--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="//db.onlinewebfonts.com/c/6ab539c6fc2b21ff0b149b3d06d7f97c?family=Minecraft" type="text/css"/> 
     <link rel="icon" href="/img/icon.png">
+    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">   -->
     <link rel="stylesheet" href="/style.css" type="text/css">
 </head>
 <body>
@@ -15,9 +15,9 @@
         <nav>
           <ul>
             <li><a href="/" class="active">Home</a></li>
-            <li><a href="#">Feed</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Discord</a></li>
+            <li><a href="/feed/">Feed</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/discord/">Discord</a></li>
           </ul>
         </nav>
         <label for="nav-toggle" class="nav-toggle-label">
@@ -25,12 +25,38 @@
         </label>
     </header>
     <div class="content">
-        <div class="foreground">
-        <h3>Amelians start their first days of the season!</h3>
+    <div class="w3-content w3-section">
+      <h3>Amelians start their first days of the season!</h3>
+        <img src="/slideshow/s_1.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_2.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_3.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_4.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_5.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_6.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_7.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_8.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_9.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_10.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_11.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_12.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_13.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_14.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_15.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_16.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_17.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_18.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_19.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_20.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_21.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+    </div>
+    <div class="article">
+    </div>
+  </div>
+
         <footer>Happy Strivers and Crafters :)
           <a href="https://discord.gg/JUY3WmM"><img src="/img/discord.png" alt="something" width="20px" height="20px" title="Wanna join our discord server?"></a>
         </footer>
-        </div>
     </div>
+    <script src="/script.js"></script>
 </body>
 </html>
