--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
     <div class="content">
     <div class="w3-content w3-section">
       <h3>Amelians start their first days of the season!</h3>
-        <img src="/slideshow/s_1.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_2.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_3.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_4.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_5.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_6.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_7.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_8.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_9.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_10.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_11.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_12.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_13.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_14.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_15.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_16.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_17.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_18.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_19.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_20.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
-        <img src="/slideshow/s_21.png" alt="minecraft w/shaders" class="slideshow w3-animate-fading">
+        <img src="/slideshow/s_1.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_2.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_3.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_4.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_5.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_6.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_7.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_8.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_9.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_10.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_11.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_12.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_13.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_14.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_15.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_16.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_17.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_18.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_19.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_20.png" alt="minecraft w/shaders" class="slideshow">
+        <img src="/slideshow/s_21.png" alt="minecraft w/shaders" class="slideshow">
     </div>
     <div class="article">
     </div>
